# course-data-engineering-spacex

./: .gitignore  .pre-commit-config.yaml  README.md  pipeline.sh  pyproject.toml  requirements.txt
basics/: data_manipulation.py  hello.py  spacex_api.py  variables.py
dbt/models/: schema.yml
intro/: spacex_api.py
queries/: sql_queries.sql
sql/: sql_queries.sql
src/: data_manipulation.py  pyproject.toml  spacex_api.py  tap_spacex.py  variables.py
tap-spacex/: tap_spacex.py
